syntax = "proto3";

package system_events;

option java_multiple_files = true;
option java_package = "ba.unsa.etf.systemevents.proto";
option java_outer_classname = "SystemEventProto";

service SystemEventService {
  rpc LogEvent(EventRequest) returns (EventResponse) {}
}

message EventRequest {
  string timestamp = 1;
  string microservice = 2;
  string user = 3;
  string action_type = 4;
  string resource = 5;
  string response_status = 6;
}

message EventResponse {
  bool success = 1;
  string message = 2;
}